# cyberfabric-core

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile
.cypilot/config/: artifacts.toml
.github/workflows/: release-plz.yml
config/: e2e-local.yaml
docs/: MODULES.md
docs/security/: SECURITY.md
dylint_lints/: Cargo.toml
libs/modkit/: Cargo.toml
libs/modkit-coord/: Cargo.toml  README.md
libs/modkit-coord/docs/: DESIGN.md  PRD.md  SHORT_DESCRIPTION.md
libs/modkit-coord/src/: lib.rs
libs/modkit-errors/src/: problem.rs
modules/chat_engine/: PRD.md
modules/file-parser/: Cargo.toml
modules/system/account-management/account-management/: Cargo.toml
modules/system/account-management/account-management-sdk/: Cargo.toml
modules/system/account-management/account-management-sdk/src/: audit.rs  error.rs  gts.rs  idp.rs  idp_tests.rs  idp_user.rs  idp_user_tests.rs  lib.rs  metadata.rs  metadata_tests.rs  metric_names.rs  tenant.rs  tenant_tests.rs
modules/system/account-management/account-management/migrations/: 0001_create_tenants.sql  0002_add_retention_columns.sql  0003_add_retention_claim_column.sql  0004_create_tenant_metadata.sql  0005_running_audits.sql
modules/system/account-management/account-management/src/: config.rs  config_tests.rs  lib.rs  module.rs  module_tests.rs
modules/system/account-management/account-management/src/api/: mod.rs
modules/system/account-management/account-management/src/api/tenants/: handlers.rs  mod.rs  models.rs
modules/system/account-management/account-management/src/domain/: audit.rs  error.rs  error_tests.rs  gts_validation.rs  gts_validation_tests.rs  metrics.rs  mod.rs
modules/system/account-management/account-management/src/domain/bootstrap/: config.rs  config_tests.rs  mod.rs  service.rs  service_tests.rs
modules/system/account-management/account-management/src/domain/conversion/: repo.rs  service.rs  service_tests.rs  state_machine.rs  state_machine_tests.rs
modules/system/account-management/account-management/src/domain/conversion/test_support/: repo.rs  repo_tests.rs
modules/system/account-management/account-management/src/domain/idp/: mod.rs  provisioner.rs
modules/system/account-management/account-management/src/domain/integrity_check/: config.rs  mod.rs  service.rs  service_tests.rs
modules/system/account-management/account-management/src/domain/metadata/: mod.rs  registry.rs  repo.rs  service.rs  service_tests.rs
modules/system/account-management/account-management/src/domain/metadata/test_support/: repo.rs  repo_tests.rs
modules/system/account-management/account-management/src/domain/ports/: metrics.rs  metrics_tests.rs
modules/system/account-management/account-management/src/domain/tenant/: closure.rs  integrity.rs  mod.rs  model.rs  model_tests.rs  repo.rs  resource_checker.rs  retention.rs  retention_tests.rs  service.rs  test_support.rs
modules/system/account-management/account-management/src/domain/tenant/service/: mod.rs  reaper.rs  retention.rs  service_tests.rs
modules/system/account-management/account-management/src/domain/tenant/test_support/: auth.rs  idp.rs  mod.rs  repo.rs
modules/system/account-management/account-management/src/domain/tenant_type/: checker.rs  mod.rs
modules/system/account-management/account-management/src/domain/user/: mod.rs  service.rs  service_tests.rs
modules/system/account-management/account-management/src/domain/user/test_support/: idp.rs
modules/system/account-management/account-management/src/domain/util/: backoff.rs
modules/system/account-management/account-management/src/infra/: canonical_mapping.rs  canonical_mapping_tests.rs  error_conv.rs  error_conv_tests.rs  metrics.rs  metrics_tests.rs  mod.rs
modules/system/account-management/account-management/src/infra/idp/: mod.rs  noop_tests.rs
modules/system/account-management/account-management/src/infra/observability/: meter.rs  meter_tests.rs  mod.rs
modules/system/account-management/account-management/src/infra/rg/: checker.rs  mod.rs
modules/system/account-management/account-management/src/infra/storage/: mod.rs  repo_impl.rs
modules/system/account-management/account-management/src/infra/storage/entity/: conversion_requests.rs  integrity_check_runs.rs  mod.rs  running_audits.rs  tenant_closure.rs  tenant_idp_metadata.rs  tenants.rs
modules/system/account-management/account-management/src/infra/storage/integrity/: loader.rs  lock.rs  mod.rs  repair.rs  repair_tests.rs  snapshot.rs
modules/system/account-management/account-management/src/infra/storage/integrity/classifiers/: barrier.rs  barrier_tests.rs  cycle.rs  depth.rs  extra_edge.rs  extra_edge_tests.rs  mod.rs  orphan.rs  orphan_tests.rs  root.rs  self_row.rs  strict_ancestor.rs
modules/system/account-management/account-management/src/infra/storage/migrations/: m0001_create_tenants.rs  m0001_initial_schema.rs  m0002_add_retention_columns.rs  m0003_add_retention_claim_column.rs  m0003_create_integrity_check_runs.rs  m0004_create_conversion_requests.rs  m0004_create_tenant_metadata.rs  m0005_running_audits.rs  m0005_tenant_metadata_indexes.rs  mod.rs
modules/system/account-management/account-management/src/infra/storage/repo_impl/: conversion.rs  helpers.rs  integrity.rs  lifecycle.rs  metadata.rs  mod.rs  reads.rs  retention.rs  updates.rs
modules/system/account-management/account-management/src/infra/types_registry/: checker.rs  checker_tests.rs  metadata_schema_registry.rs  mod.rs
modules/system/account-management/account-management/src/tr_plugin/: error_map.rs  mod.rs  plugin_impl.rs  projection.rs  queries.rs  tests.rs
modules/system/account-management/account-management/tests/: conversion_integration.rs  conversion_integration_pg.rs  integrity_integration.rs  integrity_integration_pg.rs  integrity_pg_integration.rs  integrity_sqlite_integration.rs  lifecycle_integration.rs  metadata_integration.rs  metadata_integration_pg.rs  repair_integration.rs  retention_integration.rs
modules/system/account-management/account-management/tests/common/: mod.rs
tools/dylint_lints/: Cargo.toml  README.md
(+162 files in other folders)
