[package]
name = "modkit-coord"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Distributed lease primitive for background-job consumers (placeholder skeleton; see docs/PRD.md)"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["development-tools"]

[lib]
name = "modkit_coord"

[lints]
workspace = true
