[package]
name = "cf-account-management"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Account Management module — tenant hierarchy storage floor"
repository.workspace = true
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["web-programming"]

[lib]
name = "account_management"

[lints]
workspace = true

[dependencies]
account-management-sdk = { workspace = true }

modkit = { workspace = true }
modkit-macros = { workspace = true }
modkit-security = { workspace = true }
modkit-db = { workspace = true, features = ["sqlite", "pg"] }
modkit-db-macros = { workspace = true }

uuid = { workspace = true, features = ["v4"] }
time = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

async-trait = { workspace = true }

sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
# `infra::error_conv::is_db_availability_error` deconstructs
# `DbError::Sqlx` to route pool/connection failures to the
# `service_unavailable` bucket. `sqlx` is already on the workspace dep
# graph through `modkit-db`; this declaration just makes the
# variant-matching API directly nameable here.
sqlx = { workspace = true }

tracing = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt", "time"] }

authz-resolver-sdk = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
futures = { workspace = true }
proptest = "1.5"
